parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    CLASS
    DOT
    FALSE
    FSTRING
    IN
    LBRACKET
    MODULO
    RBRACKET
    RETURN
    SWITCH
    TRUE

Grammar

Rule 0     S' -> block
Rule 1     block -> statement_list
Rule 2     scoped_block -> statement_list
Rule 3     scoped_block -> empty
Rule 4     statement_list -> statement statement_list
Rule 5     statement_list -> empty
Rule 6     statement -> var_assign SEMI
Rule 7     statement -> final_assign SEMI
Rule 8     statement -> var_compound_assign SEMI
Rule 9     statement -> var_auto SEMI
Rule 10    statement -> expr SEMI
Rule 11    statement -> func_stmt
Rule 12    statement -> func_call
Rule 13    statement -> if_stmt
Rule 14    statement -> while_stmt
Rule 15    statement -> empty
Rule 16    func_stmt -> FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
Rule 17    func_call -> var LPAREN arguments_list RPAREN
Rule 18    arguments_list -> non_empty_arguments_list
Rule 19    arguments_list -> empty
Rule 20    non_empty_arguments_list -> var
Rule 21    non_empty_arguments_list -> var COMMA non_empty_arguments_list
Rule 22    parameters_list -> non_empty_parameters_list
Rule 23    parameters_list -> empty
Rule 24    non_empty_parameters_list -> var COMMA parameters_list
Rule 25    non_empty_parameters_list -> var
Rule 26    if_stmt -> IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
Rule 27    elif_stmt -> ELIF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
Rule 28    elif_stmt -> else_stmt
Rule 29    elif_stmt -> empty
Rule 30    else_stmt -> ELSE LBRACE block RBRACE
Rule 31    while_stmt -> WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
Rule 32    for_stmt -> FOR LPAREN var_assign SEMI boolean_expr SEMI var_auto RPAREN LBRACE scoped_block RBRACE
Rule 33    var -> ID
Rule 34    var_assign -> var ASSIGN expr
Rule 35    final_assign -> FINAL var ASSIGN expr
Rule 36    var_compound_assign -> var PLUS_ASSIGN num_expr
Rule 37    var_compound_assign -> var MINUS_ASSIGN num_expr
Rule 38    var_compound_assign -> var TIMES_ASSIGN num_expr
Rule 39    var_compound_assign -> var DIVIDE_ASSIGN num_expr
Rule 40    var_compound_assign -> var POWER_ASSIGN num_expr
Rule 41    var_compound_assign -> var MODULO_ASSIGN num_expr
Rule 42    var_compound_assign -> var INT_DIVIDE_ASSIGN num_expr
Rule 43    var_auto -> var INCREMENT
Rule 44    var_auto -> var DECREMENT
Rule 45    expr -> num_expr
Rule 46    expr -> string_expr
Rule 47    expr -> boolean_expr
Rule 48    expr -> null_expr
Rule 49    expr -> ternary_expr
Rule 50    expr -> var
Rule 51    num_factor -> PLUS num_factor
Rule 52    num_factor -> MINUS num_factor
Rule 53    num_factor -> INTEGER
Rule 54    num_factor -> FLOAT
Rule 55    num_factor -> LPAREN expr RPAREN
Rule 56    num_factor -> var
Rule 57    num_expr -> num_expr PLUS num_expr
Rule 58    num_expr -> num_expr MINUS num_expr
Rule 59    num_expr -> num_expr TIMES num_expr
Rule 60    num_expr -> num_expr DIVIDE num_expr
Rule 61    num_expr -> num_expr INT_DIVIDE num_expr
Rule 62    num_expr -> num_expr POWER num_expr
Rule 63    num_expr -> num_factor
Rule 64    string_expr -> STRING PLUS string_expr
Rule 65    string_expr -> STRING
Rule 66    boolean_expr -> boolean_expr AND boolean_expr
Rule 67    boolean_expr -> boolean_expr OR boolean_expr
Rule 68    boolean_expr -> NOT boolean_expr
Rule 69    boolean_expr -> boolean_factor
Rule 70    boolean_factor -> LPAREN boolean_expr RPAREN
Rule 71    boolean_factor -> BOOLEAN
Rule 72    boolean_factor -> comparison
Rule 73    boolean_factor -> var
Rule 74    comparison -> expr EQ expr
Rule 75    comparison -> expr NE expr
Rule 76    comparison -> expr LT expr
Rule 77    comparison -> expr GT expr
Rule 78    comparison -> expr LE expr
Rule 79    comparison -> expr GE expr
Rule 80    null_expr -> NULL
Rule 81    ternary_expr -> boolean_expr TERNARY_Q expr TERNARY_C expr
Rule 82    empty -> <empty>

Terminals, with rules where they appear

AND                  : 66
ASSIGN               : 34 35
BOOLEAN              : 71
CASE                 : 
CLASS                : 
COMMA                : 21 24
DECREMENT            : 44
DIVIDE               : 60
DIVIDE_ASSIGN        : 39
DOT                  : 
ELIF                 : 27
ELSE                 : 30
EQ                   : 74
FALSE                : 
FINAL                : 35
FLOAT                : 54
FN                   : 16
FOR                  : 32
FSTRING              : 
GE                   : 79
GT                   : 77
ID                   : 33
IF                   : 26
IN                   : 
INCREMENT            : 43
INTEGER              : 53
INT_DIVIDE           : 61
INT_DIVIDE_ASSIGN    : 42
LBRACE               : 16 26 27 30 31 32
LBRACKET             : 
LE                   : 78
LPAREN               : 16 17 26 27 31 32 55 70
LT                   : 76
MINUS                : 52 58
MINUS_ASSIGN         : 37
MODULO               : 
MODULO_ASSIGN        : 41
NE                   : 75
NOT                  : 68
NULL                 : 80
OR                   : 67
PLUS                 : 51 57 64
PLUS_ASSIGN          : 36
POWER                : 62
POWER_ASSIGN         : 40
RBRACE               : 16 26 27 30 31 32
RBRACKET             : 
RETURN               : 
RPAREN               : 16 17 26 27 31 32 55 70
SEMI                 : 6 7 8 9 10 32 32
STRING               : 64 65
SWITCH               : 
TERNARY_C            : 81
TERNARY_Q            : 81
TIMES                : 59
TIMES_ASSIGN         : 38
TRUE                 : 
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

arguments_list       : 17
block                : 26 27 30 31 0
boolean_expr         : 26 27 31 32 47 66 66 67 67 68 70 81
boolean_factor       : 69
comparison           : 72
elif_stmt            : 26 27
else_stmt            : 28
empty                : 3 5 15 19 23 29
expr                 : 10 34 35 55 74 74 75 75 76 76 77 77 78 78 79 79 81 81
final_assign         : 7
for_stmt             : 
func_call            : 12
func_stmt            : 11
if_stmt              : 13
non_empty_arguments_list : 18 21
non_empty_parameters_list : 22
null_expr            : 48
num_expr             : 36 37 38 39 40 41 42 45 57 57 58 58 59 59 60 60 61 61 62 62
num_factor           : 51 52 63
parameters_list      : 16 24
scoped_block         : 16 32
statement            : 4
statement_list       : 1 2 4
string_expr          : 46 64
ternary_expr         : 49
var                  : 16 17 20 21 24 25 34 35 36 37 38 39 40 41 42 43 44 50 56 73
var_assign           : 6 32
var_auto             : 9 32
var_compound_assign  : 8
while_stmt           : 14

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . empty
    (6) statement -> . var_assign SEMI
    (7) statement -> . final_assign SEMI
    (8) statement -> . var_compound_assign SEMI
    (9) statement -> . var_auto SEMI
    (10) statement -> . expr SEMI
    (11) statement -> . func_stmt
    (12) statement -> . func_call
    (13) statement -> . if_stmt
    (14) statement -> . while_stmt
    (15) statement -> . empty
    (82) empty -> .
    (34) var_assign -> . var ASSIGN expr
    (35) final_assign -> . FINAL var ASSIGN expr
    (36) var_compound_assign -> . var PLUS_ASSIGN num_expr
    (37) var_compound_assign -> . var MINUS_ASSIGN num_expr
    (38) var_compound_assign -> . var TIMES_ASSIGN num_expr
    (39) var_compound_assign -> . var DIVIDE_ASSIGN num_expr
    (40) var_compound_assign -> . var POWER_ASSIGN num_expr
    (41) var_compound_assign -> . var MODULO_ASSIGN num_expr
    (42) var_compound_assign -> . var INT_DIVIDE_ASSIGN num_expr
    (43) var_auto -> . var INCREMENT
    (44) var_auto -> . var DECREMENT
    (45) expr -> . num_expr
    (46) expr -> . string_expr
    (47) expr -> . boolean_expr
    (48) expr -> . null_expr
    (49) expr -> . ternary_expr
    (50) expr -> . var
    (16) func_stmt -> . FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
    (17) func_call -> . var LPAREN arguments_list RPAREN
    (26) if_stmt -> . IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
    (31) while_stmt -> . WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
    (33) var -> . ID
    (57) num_expr -> . num_expr PLUS num_expr
    (58) num_expr -> . num_expr MINUS num_expr
    (59) num_expr -> . num_expr TIMES num_expr
    (60) num_expr -> . num_expr DIVIDE num_expr
    (61) num_expr -> . num_expr INT_DIVIDE num_expr
    (62) num_expr -> . num_expr POWER num_expr
    (63) num_expr -> . num_factor
    (64) string_expr -> . STRING PLUS string_expr
    (65) string_expr -> . STRING
    (66) boolean_expr -> . boolean_expr AND boolean_expr
    (67) boolean_expr -> . boolean_expr OR boolean_expr
    (68) boolean_expr -> . NOT boolean_expr
    (69) boolean_expr -> . boolean_factor
    (80) null_expr -> . NULL
    (81) ternary_expr -> . boolean_expr TERNARY_Q expr TERNARY_C expr
    (51) num_factor -> . PLUS num_factor
    (52) num_factor -> . MINUS num_factor
    (53) num_factor -> . INTEGER
    (54) num_factor -> . FLOAT
    (55) num_factor -> . LPAREN expr RPAREN
    (56) num_factor -> . var
    (70) boolean_factor -> . LPAREN boolean_expr RPAREN
    (71) boolean_factor -> . BOOLEAN
    (72) boolean_factor -> . comparison
    (73) boolean_factor -> . var
    (74) comparison -> . expr EQ expr
    (75) comparison -> . expr NE expr
    (76) comparison -> . expr LT expr
    (77) comparison -> . expr GT expr
    (78) comparison -> . expr LE expr
    (79) comparison -> . expr GE expr

  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for FN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    $end            reduce using rule 82 (empty -> .)
    FINAL           shift and go to state 15
    FN              shift and go to state 21
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    ID              shift and go to state 25
    STRING          shift and go to state 29
    NOT             shift and go to state 30
    NULL            shift and go to state 32
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    INTEGER         shift and go to state 33
    FLOAT           shift and go to state 34
    LPAREN          shift and go to state 22
    BOOLEAN         shift and go to state 35

  ! FINAL           [ reduce using rule 82 (empty -> .) ]
  ! FN              [ reduce using rule 82 (empty -> .) ]
  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! WHILE           [ reduce using rule 82 (empty -> .) ]
  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! STRING          [ reduce using rule 82 (empty -> .) ]
  ! NOT             [ reduce using rule 82 (empty -> .) ]
  ! NULL            [ reduce using rule 82 (empty -> .) ]
  ! PLUS            [ reduce using rule 82 (empty -> .) ]
  ! MINUS           [ reduce using rule 82 (empty -> .) ]
  ! INTEGER         [ reduce using rule 82 (empty -> .) ]
  ! FLOAT           [ reduce using rule 82 (empty -> .) ]
  ! LPAREN          [ reduce using rule 82 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 82 (empty -> .) ]

    block                          shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    var_assign                     shift and go to state 5
    final_assign                   shift and go to state 6
    var_compound_assign            shift and go to state 7
    var_auto                       shift and go to state 8
    expr                           shift and go to state 9
    func_stmt                      shift and go to state 10
    func_call                      shift and go to state 11
    if_stmt                        shift and go to state 12
    while_stmt                     shift and go to state 13
    var                            shift and go to state 14
    num_expr                       shift and go to state 16
    string_expr                    shift and go to state 17
    boolean_expr                   shift and go to state 18
    null_expr                      shift and go to state 19
    ternary_expr                   shift and go to state 20
    num_factor                     shift and go to state 28
    boolean_factor                 shift and go to state 31
    comparison                     shift and go to state 36

state 1

    (0) S' -> block .



state 2

    (1) block -> statement_list .

    $end            reduce using rule 1 (block -> statement_list .)
    RBRACE          reduce using rule 1 (block -> statement_list .)


state 3

    (4) statement_list -> statement . statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . empty
    (6) statement -> . var_assign SEMI
    (7) statement -> . final_assign SEMI
    (8) statement -> . var_compound_assign SEMI
    (9) statement -> . var_auto SEMI
    (10) statement -> . expr SEMI
    (11) statement -> . func_stmt
    (12) statement -> . func_call
    (13) statement -> . if_stmt
    (14) statement -> . while_stmt
    (15) statement -> . empty
    (82) empty -> .
    (34) var_assign -> . var ASSIGN expr
    (35) final_assign -> . FINAL var ASSIGN expr
    (36) var_compound_assign -> . var PLUS_ASSIGN num_expr
    (37) var_compound_assign -> . var MINUS_ASSIGN num_expr
    (38) var_compound_assign -> . var TIMES_ASSIGN num_expr
    (39) var_compound_assign -> . var DIVIDE_ASSIGN num_expr
    (40) var_compound_assign -> . var POWER_ASSIGN num_expr
    (41) var_compound_assign -> . var MODULO_ASSIGN num_expr
    (42) var_compound_assign -> . var INT_DIVIDE_ASSIGN num_expr
    (43) var_auto -> . var INCREMENT
    (44) var_auto -> . var DECREMENT
    (45) expr -> . num_expr
    (46) expr -> . string_expr
    (47) expr -> . boolean_expr
    (48) expr -> . null_expr
    (49) expr -> . ternary_expr
    (50) expr -> . var
    (16) func_stmt -> . FN var LPAREN parameters_list RPAREN LBRACE scoped_block RBRACE
    (17) func_call -> . var LPAREN arguments_list RPAREN
    (26) if_stmt -> . IF LPAREN boolean_expr RPAREN LBRACE block RBRACE elif_stmt
    (31) while_stmt -> . WHILE LPAREN boolean_expr RPAREN LBRACE block RBRACE
    (33) var -> . ID
    (57) num_expr -> . num_expr PLUS num_expr
    (58) num_expr -> . num_expr MINUS num_expr
    (59) num_expr -> . num_expr TIMES num_expr
    (60) num_expr -> . num_expr DIVIDE num_expr
    (61) num_expr -> . num_expr INT_DIVIDE num_expr
    (62) num_expr -> . num_expr POWER num_expr
    (63) num_expr -> . num_factor
    (64) string_expr -> . STRING PLUS string_expr
    (65) string_expr -> . STRING
    (66) boolean_expr -> . boolean_expr AND boolean_expr
    (67) boolean_expr -> . boolean_expr OR boolean_expr
    (68) boolean_expr -> . NOT boolean_expr
    (69) boolean_expr -> . boolean_factor
    (80) null_expr -> . NULL
    (81) ternary_expr -> . boolean_expr TERNARY_Q expr TERNARY_C expr
    (51) num_factor -> . PLUS num_factor
    (52) num_factor -> . MINUS num_factor
    (53) num_factor -> . INTEGER
    (54) num_factor -> . FLOAT
    (55) num_factor -> . LPAREN expr RPAREN
    (56) num_factor -> . var
    (70) boolean_factor -> . LPAREN boolean_expr RPAREN
    (71) boolean_factor -> . BOOLEAN
    (72) boolean_factor -> . comparison
    (73) boolean_factor -> . var
    (74) comparison -> . expr EQ expr
    (75) comparison -> . expr NE expr
    (76) comparison -> . expr LT expr
    (77) comparison -> . expr GT expr
    (78) comparison -> . expr LE expr
    (79) comparison -> . expr GE expr

  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for FN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NULL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    $end            reduce using rule 82 (empty -> .)
    RBRACE          reduce using rule 82 (empty -> .)
    FINAL           shift and go to state 15
    FN              shift and go to state 21
    IF              shift and go to state 23
    WHILE           shift and go to state 24
    ID              shift and go to state 25
    STRING          shift and go to state 29
    NOT             shift and go to state 30
    NULL            shift and go to state 32
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    INTEGER         shift and go to state 33
    FLOAT           shift and go to state 34
    LPAREN          shift and go to state 22
    BOOLEAN         shift and go to state 35

  ! FINAL           [ reduce using rule 82 (empty -> .) ]
  ! FN              [ reduce using rule 82 (empty -> .) ]
  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! WHILE           [ reduce using rule 82 (empty -> .) ]
  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! STRING          [ reduce using rule 82 (empty -> .) ]
  ! NOT             [ reduce using rule 82 (empty -> .) ]
  ! NULL            [ reduce using rule 82 (empty -> .) ]
  ! PLUS            [ reduce using rule 82 (empty -> .) ]
  ! MINUS           [ reduce using rule 82 (empty -> .) ]
  ! INTEGER         [ reduce using rule 82 (empty -> .) ]
  ! FLOAT           [ reduce using rule 82 (empty -> .) ]
  ! LPAREN          [ reduce using rule 82 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 82 (empty -> .) ]

    statement                      shift and go to state 3
    statement_list                 shift and go to state 37
    empty                          shift and go to state 4
    var_assign                     shift and go to state 5
    final_assign                   shift and go to state 6
    var_compound_assign            shift and go to state 7
    var_auto                       shift and go to state 8
    expr                           shift and go to state 9
    func_stmt                      shift and go to state 10
    func_call                      shift and go to state 11
    if_stmt                        shift and go to state 12
    while_stmt                     shift and go to state 13
    var                            shift and go to state 14
    num_expr                       shift and go to state 16
    string_expr                    shift and go to state 17
    boolean_expr                   shift and go to state 18
    null_expr                      shift and go to state 19
    ternary_expr                   shift and go to state 20
    num_factor                     shift and go to state 28
    boolean_factor                 shift and go to state 31
    comparison                     shift and go to state 36

state 4

    (5) statement_list -> empty .
    (15) statement -> empty .

  ! reduce/reduce conflict for $end resolved using rule 5 (statement_list -> empty .)
  ! reduce/reduce conflict for RBRACE resolved using rule 5 (statement_list -> empty .)
    $end            reduce using rule 5 (statement_list -> empty .)
    RBRACE          reduce using rule 5 (statement_list -> empty .)
    FINAL           reduce using rule 15 (statement -> empty .)
    FN              reduce using rule 15 (statement -> empty .)
    IF              reduce using rule 15 (statement -> empty .)
    WHILE           reduce using rule 15 (statement -> empty .)
    ID              reduce using rule 15 (statement -> empty .)
    STRING          reduce using rule 15 (statement -> empty .)
    NOT             reduce using rule 15 (statement -> empty .)
    NULL            reduce using rule 15 (statement -> empty .)
    PLUS            reduce using rule 15 (statement -> empty .)
    MINUS           reduce using rule 15 (statement -> empty .)
    INTEGER         reduce using rule 15 (statement -> empty .)
    FLOAT           reduce using rule 15 (statement -> empty .)
    LPAREN          reduce using rule 15 (statement -> empty .)
    BOOLEAN         reduce using rule 15 (statement -> empty .)

  ! $end            [ reduce using rule 15 (statement -> empty .) ]
  ! RBRACE          [ reduce using rule 15 (statement -> empty .) ]


state 5

    (6) statement -> var_assign . SEMI

    SEMI            shift and go to state 38


state 6

    (7) statement -> final_assign . SEMI

    SEMI            shift and go to state 39


state 7

    (8) statement -> var_compound_assign . SEMI

    SEMI            shift and go to state 40


state 8

    (9) statement -> var_auto . SEMI

    SEMI            shift and go to state 41


state 9

    (10) statement -> expr . SEMI
    (74) comparison -> expr . EQ expr
    (75) comparison -> expr . NE expr
    (76) comparison -> expr . LT expr
    (77) comparison -> expr . GT expr
    (78) comparison -> expr . LE expr
    (79) comparison -> expr . GE expr

    SEMI            shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    LT              shift and go to state 45
    GT              shift and go to state 46
    LE              shift and go to state 47
    GE              shift and go to state 48


state 10

    (11) statement -> func_stmt .
